--- a/index.html
+++ b/index.html
@@ -19,7 +19,77 @@
   </head>
   <body>
     <!-- YOUR HTML GOES HERE -->
-<h1>decision maker</h1>
+
+
+
+<article>
+  <h1>Decision Maker</h1>
+  <h2>Having a hard time making your decision? No worries. We are here to help you!</h2>
+
+
+
+
+  <h3>What's Your Question?</h3>
+  <div class="col-auto">
+        <label for="num-input" class="form-label"></label>
+      </div>
+      <div class="col-auto">
+        <input id="num-input" type="question" class="form-control">
+      </div>
+  <h3>What are your choices?</h3>
+  <div class="col-auto">
+        <label for="question-input" class="form-label"></label>
+      </div>
+      <div class="col-auto">
+        <input id="question-input" type="question" class="form-control">
+      </div>
+      <div class="col-auto">
+        <label for="question-input" class="form-label"></label>
+      </div>
+      <div class="col-auto">
+        <input id="question-input" type="question" class="form-control">
+      </div>
+      <p>+ add more</p>
+    <h3> Here Are Your Options:</h3>
+    
+ 
+
+
+  </article>
+  
+  
+  
+  <div class=”container”>
+    
+    <a id="flower" href="flower.html">  </a>
+  
+    <a id="wheel">  </a>
+  
+    <a id="coin"> </a>
+  
+  </div>
+
+
+  <div class="methods">
+
+
+  <h2>Flower of Answers</h2>
+
+  <aside> Click flower to start</aside>
+
+  <h3>Answer box</h3>
+
+  <h2>Spinning Wheel</h2>
+  <aside> Click wheel to spin</aside>
+  <h3>Answer box</h3>
+
+  <h2>Coin Flipping</h2>
+  <aside> Click coin to flip</aside>
+  <h3>Answer box</h3>
+  
+</div>
+
+
     <!-- YOUR EXTERNAL PLUG-IN MAY ASK YOU TO PUT A SCRIPT TAG HERE. -->
   </body>
 </html>
