--- a/wheel.html
+++ b/wheel.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Coin Flipping</h2>
-  <aside> Click coin to flip</aside>
+    <h2>Spinning Wheel</h2>
+  <aside> Click wheel to spin</aside>
   <h3>Answer box</h3>
 
 </body>
