--- a/flower.html
+++ b/flower.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Coin Flipping</h2>
-  <aside> Click coin to flip</aside>
-  <h3>Answer box</h3>
+    <h2>Flower of Answers</h2>
 
+    <aside> Click flower to start</aside>
+  
+    <h3>Answer box</h3>
+  
 </body>
 </html>
