--- a/index.html
+++ b/index.html
@@ -61,33 +61,17 @@
   
   <div class=”container”>
     
-    <a id="flower" href="flower.html">  </a>
+    <a id="flower">  </a>
   
     <a id="wheel">  </a>
   
-    <a id="coin"> </a>
+    <a id="coin"> </a> 
   
   </div>
 
 
-  <div class="methods">
+ 
 
-
-  <h2>Flower of Answers</h2>
-
-  <aside> Click flower to start</aside>
-
-  <h3>Answer box</h3>
-
-  <h2>Spinning Wheel</h2>
-  <aside> Click wheel to spin</aside>
-  <h3>Answer box</h3>
-
-  <h2>Coin Flipping</h2>
-  <aside> Click coin to flip</aside>
-  <h3>Answer box</h3>
-  
-</div>
 
 
     <!-- YOUR EXTERNAL PLUG-IN MAY ASK YOU TO PUT A SCRIPT TAG HERE. -->
