--- a/coin.html
+++ b/coin.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/styles.css" />
-    <script src="scripts/scripts.js" defer></script>
+    <script src="scripts/coin.js" defer></script>
 </head>
+
 <body id="coins">
   
 <div class="stats-container">
