--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   
   <h1>Decision Maker</h1>
-  <h2>Having a hard time making your decision? No worries. We are here to help you!</h2>
+  <h2 id="subtitle">Having a hard time making your decision? No worries. We are here to help you!</h2>
 
 
 
