--- a/wheel.html
+++ b/wheel.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     <h2>Spinning Wheel</h2>
+    <div class="gacha">
+        <a> <img id="gachabase" src="images/gachabase.PNG"> </a>
+        <div> <img id="gachabutton" src="images/gachabutton.PNG"> </div>
+        <div class="insideCapsule"></div>
+        <a> <img id="gachaWindow" src="images/gachaWindow.PNG"> </a>
+    </div>
+
   <aside> Click wheel to spin</aside>
   <h3>Answer box</h3>
 
