--- a/coin.html
+++ b/coin.html
@@ -13,8 +13,8 @@
 <div class="stats-container">
   <h2 id="cointitle">Coin Flipping</h2>
   <div class="stats">
-    <p id="heads-count">Heads: h</p>
-    <p id="tails-count">Tails: h</p>
+    <p id="heads-count">Heads: </p>
+    <p id="tails-count">Tails: </p>
   </div>
   <div class="coin">
     <div class="heads">
