--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   
   <h1>Decision Maker</h1>
-  <h2 id="subtitle">Having a hard time making your decision? No worries. We are here to help you!</h2>
+  <h2 id="subtitle">Having a hard time making your decision?<br>No worries. We are here to help you!</h2>
 
 
 
@@ -49,7 +49,7 @@
         <form action="" method="post" autocomplete="off">
 
           <div class="field">
-            <input type="text" name="notes[]">
+            <input id="userinput" type="text" name="notes[]">
             <span onclick="addField(this)">+</span>
             <span onclick="removeField(this)">-</span>
           </div>
@@ -71,7 +71,7 @@
     <div class="method">
 
           <a id="flower" href="flower.html" ><img id="flowerimage" src="https://cdn-icons-png.flaticon.com/512/3077/3077026.png">  </a>
-          <a>Flower of Answers</a>
+          <a lass="links" href="flower.html">Flower of Answers</a>
 
         </div>
 
@@ -79,15 +79,15 @@
         <div class="method">
 
           <a id="gacha" href="gacha.html"> <img id="gachaimage" src="https://cdn-icons-png.flaticon.com/512/1907/1907727.png"> </a>
-          <a>Gacha</a>
+          <a lass="links" href="gacha.html">Gacha</a>
 
         </div>
 
 
         <div class="method">
 
-        <a id="coinlink" href="coin.html"> <img id="coinimage" src="https://i.pinimg.com/originals/bd/f4/a4/bdf4a4035d7aa53773dc70d7c12c1692.png"> </a> 
-        <a>Coin Flipping</a>
+        <a class="coinlink"id="coinlink" href="coin.html"> <img id="coinimage" src="https://i.pinimg.com/originals/bd/f4/a4/bdf4a4035d7aa53773dc70d7c12c1692.png"> </a> 
+        <a class="coinlink" href="coin.html">Coin Flipping</a>
 
         </div>
           
