--- a/coin.html
+++ b/coin.html
@@ -13,7 +13,7 @@
 <div class="stats-container">
   <h2 id="cointitle">Coin Flipping</h2>
   <div class="stats">
-    <p id="heads-count">Heads: m</p>
+    <p id="heads-count">Heads: </p>
     <p id="tails-count">Tails: </p>
   </div>
   <div class="coin">
@@ -29,8 +29,10 @@
 
     </div>
   </div>
-  <div class="answer-box">
-    
+
+
+  <div id="answer-box">
+    <p>Answer</p>
   </div>
   <div class="coin-buttons">
     <button id="flip-button">
