--- a/gacha.html
+++ b/gacha.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>Document</title>
 </head>
 <body>
-    <h2>Spinning Wheel</h2>
+    <h2>Gacha of Decisions</h2>
     <div class="gacha">
         <a> <img id="gachabase" src="images/gachabase.PNG"> </a>
         <div> <img id="gachabutton" src="images/gachabutton.PNG"> </div>
@@ -15,7 +16,7 @@
         <a> <img id="gachaWindow" src="images/gachaWindow.PNG"> </a>
     </div>
 
-  <aside> Click wheel to spin</aside>
+  <aside> Click to spin</aside>
   <h3>Answer box</h3>
 
 </body>
