--- a/coin.html
+++ b/coin.html
@@ -11,7 +11,7 @@
 <body id="coins">
 
 <div class="stats-container">
-  <h2 id="cointitle">Coin Flipping</h2>
+  <h2 class="individualtitle">Coin Flipping</h2>
   <div class="stats">
     <p id="heads-count">Heads: </p>
     <p id="tails-count">Tails: </p>
