--- a/gacha.html
+++ b/gacha.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css" />
-    <title>Document</title>
+    <title>Gacha of Decisions</title>
 </head>
 <body>
     <h2>Gacha of Decisions</h2>
