--- a/flower.html
+++ b/flower.html
@@ -9,7 +9,7 @@
     </head>
     
     <body>
-        <h2>Flower of Answers</h2>
+        <h2 class="individualtitle">Flower of Answers</h2>
         
         <div class="rose">
             <div class="thorns">
