--- a/gacha.html
+++ b/gacha.html
@@ -8,7 +8,7 @@
     <title>Gacha of Decisions</title>
 </head>
 <body>
-    <h2>Gacha of Decisions</h2>
+    <h2 class="individualtitle">Gacha of Decisions</h2>
     <div class="gacha">
         <a> <img id="gachabase" src="images/gachabase.PNG"> </a>
         <div> <img id="gachabutton" src="images/gachabutton.PNG"> </div>
