--- a/gacha.html
+++ b/gacha.html
@@ -12,12 +12,11 @@
     <div class="gacha">
         <a> <img id="gachabase" src="images/gachabase.PNG"> </a>
         <div> <img id="gachabutton" src="images/gachabutton.PNG"> </div>
-        <div class="insideCapsule"></div>
         <a> <img id="gachaWindow" src="images/gachaWindow.PNG"> </a>
     </div>
-
-  <aside> Click to spin</aside>
-  <h3>Answer box</h3>
+    
+    <div class="insideCapsule"></div>
+    <button id="gachaBtn"> Click to spin</button>
 
 </body>
 </html>
