--- a/gacha.html
+++ b/gacha.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css" />
+    <script src="scripts.js"></script>
     <title>Gacha of Decisions</title>
 </head>
 <body>
@@ -17,6 +18,7 @@
     
     <div class="insideCapsule"></div>
     <button id="gachaBtn"> Click to spin</button>
+    <div id="answer"> </div>
 
 </body>
 </html>
