--- a/gacha.html
+++ b/gacha.html
@@ -6,20 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css" />
-    <link rel="stylesheet" href="styles/niudan.css" />
+    <link rel="stylesheet" href="styles/gacha.css" />
     <script src="/scripts/gacha.js" defer></script>
     <title>Gacha of Decisions</title>
 </head>
 
 <body>
     <h2 class="individualtitle">Gacha of Decisions</h2>
-    <!-- <div class="gacha">
-        <a> <img id="gachabase" src="images/gachabase.PNG"> </a>
-        <div> <img id="gachabutton" src="images/gachabutton.PNG"> </div>
-        <a> <img id="gachaWindow" src="images/gachaWindow.PNG"> </a>
-    </div> -->
-    <div class="niu_danji">
-        <!--机器-->
+  
+    <div class="gachaMachine">
         <div class="game_qu">
             <!--go-->
             <div class="game_go"></div>
@@ -27,7 +22,7 @@
         </div>
 
         <!--球-->
-        <div class="dan_gund" id="dan_gund">
+        <div class="capsule" id="capsule">
             <!-- <span class="qiu_1 diaol_1"></span>
             <span class="qiu_2 diaol_2"> </span>
             <span class="qiu_3 diaol_3"></span>
@@ -47,7 +42,7 @@
         </div>
 
 
-        <div class="medon"><img src="images/mendong.png"></div>
+        <div class="dispenser"><img src="images/dispenser.png"></div>
         <div class="zjdl">
             <span></span>
         </div>
