--- a/gacha.html
+++ b/gacha.html
@@ -15,40 +15,21 @@
     <h2 class="individualtitle">Gacha of Decisions</h2>
   
     <div class="gachaMachine">
-        <div class="game_qu">
-            <!--go-->
-            <div class="game_go"></div>
-            <div class="wdjifen"></div>
+        <div class="background">
+            <div class="decor"></div>
         </div>
 
-        <!--球-->
         <div class="capsule" id="capsule">
-            <!-- <span class="qiu_1 diaol_1"></span>
-            <span class="qiu_2 diaol_2"> </span>
-            <span class="qiu_3 diaol_3"></span>
-
-            <span class="qiu_4 diaol_4"></span>
-            <span class="qiu_5 diaol_5"></span>
-            <span class="qiu_6 diaol_6"></span>>
-
-            <span class="qiu_7 diaol_7"></span>
-            <span class="qiu_8 diaol_8"></span>
-
-
-            <span class="qiu_9 diaol_9"></span>
-            <span class="qiu_10 diaol_10"></span>
-            <span class="qiu_11 diaol_11"></span> -->
-
         </div>
 
 
         <div class="dispenser"><img src="images/dispenser.png"></div>
-        <div class="zjdl">
+        <div class="dispenseOutput">
             <span></span>
         </div>
 
     </div>
-    <!-- <div class="insideCapsule"></div> -->
+
     <div id="content">
         <p id="content_text">Your Answer</p>
     </div>
