--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- PUT A TITLE IN HERE -->
-  <title>This is the demo</title>
+  <title>Decision Maker</title>
   <!-- PUT A DESCRIPTION IN HERE -->
   <meta name="description" content="describe content of the page here...." />
   <!-- LINK TO NORMALIZE (FOR CONSISTENCY) -->
