--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <div class="method">
 
-              <a id="flower" href="flower.html"><img id="flowerimage"
+              <a id="flower" href="flower.html"><img id="flowerimage" alt="flower-image"
                   src="https://cdn-icons-png.flaticon.com/512/3077/3077026.png"> </a>
               <a lass="links" href="flower.html">Flower of Answers</a>
 
@@ -82,7 +82,7 @@
 
             <div class="method">
 
-              <a id="gacha" href="gacha.html"> <img id="gachaimage"
+              <a id="gacha" href="gacha.html"> <img id="gachaimage" alt="gacha-image"
                   src="https://cdn-icons-png.flaticon.com/512/1907/1907727.png"> </a>
               <a lass="links" href="gacha.html">Gacha</a>
 
@@ -91,7 +91,7 @@
 
             <div class="method">
 
-              <a class="coinlink" id="coinlink" href="coin.html"> <img id="coinimage"
+              <a class="coinlink" id="coinlink" href="coin.html"> <img id="coinimage" alt="coin-image"
                   src="https://i.pinimg.com/originals/bd/f4/a4/bdf4a4035d7aa53773dc70d7c12c1692.png"> </a>
               <a class="coinlink" href="coin.html">Coin Flipping</a>
 
@@ -114,7 +114,22 @@
 
   </article>
 
-
+  <div class="navBar">
+    <ul> 
+        
+        <li>
+            <a href="/index.html">
+                <img src="/images/home.png" alt="home">
+            </a>
+        </li>
+        <li>
+            <a href="/info.html">
+                <img src="/images/info.png" alt="info">
+            </a>
+        </li>
+    </ul>
+</div>
+</body>
 
 
 
