--- a/coin.html
+++ b/coin.html
@@ -26,11 +26,11 @@
     <div class="coin">
       <div class="heads">
         <img
-          src="https://lh3.googleusercontent.com/T7JBKTufYIG68YaKrpMhFAzSK-WnLG2f1LLULALBa7kkO4kfaGvNmtlJDFzIKBMRpcQjzJr0wnv-UmnGSK1ZL3TGr2plaJO6Un61DzxfBxomI4fEHg82aemKw90qCVP_Y0NcrL6I=w600-h315-p-k">
+          src="https://lh3.googleusercontent.com/T7JBKTufYIG68YaKrpMhFAzSK-WnLG2f1LLULALBa7kkO4kfaGvNmtlJDFzIKBMRpcQjzJr0wnv-UmnGSK1ZL3TGr2plaJO6Un61DzxfBxomI4fEHg82aemKw90qCVP_Y0NcrL6I=w600-h315-p-k" alt="coin-heads">
       </div>
       <div class="tails">
         <img
-          src="https://lh3.googleusercontent.com/bZ7C_I9N4v5uW4kAsgl_DC_LBAbYA-OcEFbzKdfpdxYCp-Eg-1j0WrID1bE0R1z-hk0sohn828_kFww-LnOOVoGRITW1FbC10z-CSuQe9ZpzQitxrlwCi-48spJLsF2MiLwjuwaA=w600-h315-p-k">
+          src="https://lh3.googleusercontent.com/bZ7C_I9N4v5uW4kAsgl_DC_LBAbYA-OcEFbzKdfpdxYCp-Eg-1j0WrID1bE0R1z-hk0sohn828_kFww-LnOOVoGRITW1FbC10z-CSuQe9ZpzQitxrlwCi-48spJLsF2MiLwjuwaA=w600-h315-p-k" alt="coin-tails">
       </div>
     </div>
 
