--- a/info.html
+++ b/info.html
@@ -4,17 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<<<<<<< HEAD
     <link rel="stylesheet" href="/styles/styles.css">
-=======
->>>>>>> a3e61b94312127d033c016aae2a9d44306689b1a
     <title>Document</title>
 </head>
 <body>
-    info
-<<<<<<< HEAD
+    <ul id="info-page">
+        <h2>Info</h2>
+            <p>Team: Irene Zan, Jacklyn Tsung, Stella Weng</p>
+        <a class="info-box" href="https://docs.google.com/document/d/1n1IfbCv9INCpoX0Knqu50DwzmAm3egoy7sVVu3EHpqo/edit">Proposal</a>
+        <a class="info-box" href="https://drive.google.com/file/d/1TYyyZ9m05MU_lCSAW7ebB4pBBeafb1Mp/view?usp=share_link">Wireframe</a>
+        <a class="info-box" href="https://www.figma.com/file/HjETwHw4kpOAulJM37Rko4/CM523-Prototype?node-id=0%3A1&t=VV3kLntCNP5zcH12-1">Prototype</a>
+        <a class="info-box" href="https://docs.google.com/document/d/1clvg3xxJML-6CX-KoIgzvu6-5xnieAllQXyyNmHQgic/edit?usp=sharing">UX Report</a>
+        <a class="info-box" href="https://docs.google.com/document/d/1LHB0UjsdPjmy4d9Fewc5jOm8G2Jqje0_-sOQymKtKpw/edit">Design Document</a>
+        <a class="info-box" href="https://docs.google.com/document/d/183n5tGB2J8bjF5LWzJCE1o2Q7nZ2XQpQm-7qwEJM6jk/edit">Reference</a>
+    </ul>
     <div class="navBar">
-        <ul>
+        <ul> 
+            
             <li>
                 <a href="/index.html">
                     <img src="/images/home.png" alt="home">
@@ -29,7 +35,3 @@
     </div>
 </body>
 </html>
-=======
-</body>
-</html>
->>>>>>> a3e61b94312127d033c016aae2a9d44306689b1a
