--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </a>
         </li>
         <li>
-            <a href="/info.html">
+            <a href="info.html">
                 <img src="/images/info.png" alt="info">
             </a>
         </li>
