--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         </li>
         <li>
-          <h2>What are your choices?</h2>
+          <h2>What are your choices? (press + to commit!)</h2>
 
           <div id="form" >
 
