--- a/coin.html
+++ b/coin.html
@@ -50,12 +50,12 @@
     <ul>
       <li>
         <a href="/index.html">
-          <img src="/images/home.png" alt="home">
+          <img src="images/home.png" alt="home">
         </a>
       </li>
       <li>
         <a href="/info.html">
-          <img src="/images/info.png" alt="info">
+          <img src="images/info.png" alt="info">
         </a>
       </li>
     </ul>
