--- a/gacha.html
+++ b/gacha.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/gacha.css" />
-    <script src="/scripts/gacha.js" defer></script>
+    <script src="scripts/gacha.js" defer></script>
     <title>Gacha of Decisions</title>
 </head>
 
@@ -39,12 +39,12 @@
         <ul>
             <li>
                 <a href="/index.html">
-                    <img src="/images/home.png" alt="home">
+                    <img src="images/home.png" alt="home">
                 </a>
             </li>
             <li>
                 <a href="/info.html">
-                    <img src="/images/info.png" alt="info">
+                    <img src="images/info.png" alt="info">
                 </a>
             </li>
         </ul>
