--- a/info.html
+++ b/info.html
@@ -25,12 +25,12 @@
             
             <li>
                 <a href="/index.html">
-                    <img src="/images/home.png" alt="home">
+                    <img src="images/home.png" alt="home">
                 </a>
             </li>
             <li>
                 <a href="/info.html">
-                    <img src="/images/info.png" alt="info">
+                    <img src="images/info.png" alt="info">
                 </a>
             </li>
         </ul>
