--- a/flower.html
+++ b/flower.html
@@ -51,7 +51,7 @@
         <div class="navBar">
             <ul>
               <li>
-                <a href="/index.html">
+                <a href="./index.html">
                   <img src="images/home.png" alt="home">
                 </a>
               </li>
