--- a/coin.html
+++ b/coin.html
@@ -49,7 +49,7 @@
   <div class="navBar">
     <ul>
       <li>
-        <a href="/index.html">
+        <a href="./index.html">
           <img src="images/home.png" alt="home">
         </a>
       </li>
