--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <ul> 
         
         <li>
-            <a href="/index.html">
+            <a href="./index.html">
                 <img src="images/home.png" alt="home">
             </a>
         </li>
